Updates from Overleaf

--- a/keynote.tex
+++ b/keynote.tex
@@ -1027,16 +1027,22 @@ This statement requires citation \cite{Smith:2012qr}.
 \thispagestyle{empty} % No slide header and footer
 
 \begin{tikzpicture}[remember picture,overlay] % Background box
-\node [xshift=\paperwidth/2,yshift=\paperheight/2] at (current page.south west)[rectangle,fill,inner sep=0pt,minimum width=\paperwidth,minimum height=\paperheight/3,top color=mygreen,bottom color=mygreen]{}; % Change the height of the box, its colors and position on the page here
+  \node [xshift=\paperwidth/2,yshift=\paperheight/2] at (current page.south west)
+    [rectangle,fill,inner sep=0pt,minimum width=\paperwidth,minimum height=\paperheight/2.1,top color=myblue,bottom color=myblue]{}; % Change the height of the box, its colors and position on the page here
 \end{tikzpicture}
 % Text within the box
 \begin{flushright}
-\vspace{0.6cm}
-\color{white}\sffamily
-{\bfseries\LARGE Comments and Suggestions\par} % Request for questions text
-\vfill
+  \vspace{1.6cm}
+  \color{white}\sffamily
+  {\bfseries\Large Comments and Suggestions\par}% Title
+  \vspace{0.5cm}
+  \normalsize
+%  \myauthor\par % Author name
+%  \mydate\par % Date
+  \myuni\par
+  \vfill
 \end{flushright}
 
 %----------------------------------------------------------------------------------------
-
+%
 \end{document}
