Updates from Overleaf

--- a/keynote.tex
+++ b/keynote.tex
@@ -713,7 +713,7 @@ show that over 50\% of those unadjusted \protect\textit{p}~values derived by the
 %%%\label{fig:figure4}
 \end{figure}
 
-\begin{specialtable}[H] 
+\begin{table}[H] 
 %\centering
 %%%\caption{Univariate/multivariate Cox proportional hazard regression analyses on OS time of CAMK2N1 gene expression in HNSCC.}
 
@@ -782,9 +782,9 @@ CI95\%: 95\% confidence interval;
 \protect\textit{p}~value significant code is denoted: red \textless{} 0.05).} %; *** \textless{} 0.001).}                                        
 }
 %\arrayrulecolor{black}
-\end{specialtable}
+\end{table}
 
-\begin{specialtable}[H] 
+\begin{table}[H] 
 %\centering
 %%%\caption{The top 3 genes with prognostic impacts on HNSCC.}% (ranked by Bonferroni-adjusted \protect\textit{p}~values}
 
@@ -850,7 +850,7 @@ FCGBP &
 *~Cox's model: \protect\textit{p} \textless 0.001
 (HR: hazard ratio; CI95\%: 95\% confidence interval; FDR: \acrlong{fdr}).}
 
-\end{specialtable}
+\end{table}
 
 
 \section{Discussion}
@@ -879,7 +879,7 @@ FCGBP &
 \begin{figure}[ht]
 
 \floatbox[{\capbeside\thisfloatsetup{capbesideposition={right,center},capbesidewidth=.35\linewidth,capbesidesep=quad}}]{figure}[\FBwidth]
-{\widefigure
+{%\widefigure
     %\centering
     
     \begin{subfigure}[a]{0.5\textwidth}
